# bytecode

./: pyproject.toml
bytecode/: __main__.py  main.py  sample_data.py
bytecode/score/: __init__.py  main.py  muse.py  parse.py  utils.py
example_data/: FizzBuzz.mscz  full.mscz  hello world.mscz  hello_world.mscz  organ.mscz  score.xml
example_data/fizz_buzz/: FizzBuzz.mscx  audiosettings.json  score.xml  score_style.mss
example_data/full-extracted/: audiosettings.json  score-02042f327b7cd6dd73aaf864cb558428.mscx
example_data/hello_world/: hello world.mscx  score.xml
example_data/organ_example/: audiosettings.json  lucis-creator_organ.mscx  score_style.mss
